# FastOWM

./: .gitignore  LICENSE  README.md  headers.ipynb  headers.py
CPP-CPU-Hetero/: Makefile  MakefileXX  README.md  historial_guardado.txt  job.sh  resultados_maxPoints.csv
CPP-CPU-Hetero/application/: CMakeLists.txt  OWM_baseline.c  cesgaOWM.c  cesgaOWM1.c  cesgaOWM_baseline.c  cesgaOWM_seq.c  owm_gpu.cpp  owm_gpu.cu  owm_gpu1.cpp  owm_gpu3.cpp  owm_optim0.cpp  owm_optim1_qtree.cpp  owm_optim2.cpp  owm_optim2and3.cpp  owm_optim3.cpp  owm_parent.cpp  owm_qmin.cpp  owm_qold.cpp  owm_stats.cpp  owm_tfm.cpp  owm_tfm3.cpp  owm_tfm4.cpp  owm_up.cpp  owm_usm.cpp
CPP-TBB-CPU/: Makefile
CPP-TBB-CPU/Old/: CMakeLists.txt
CPP-TBB-CPU/Old/application/: owm_optim2and3.cpp  owm_tfm1.cpp  owm_up.cpp
CPP-TBB-CPU/Old/include/: envi1.h  envi2.h  envi_parent.h
CPP-TBB-CPU/Old/scripts/: run_par_optim2and3.py
CPP-TBB-CPU/Old/src/: envi3.cpp
CPP-TBB-CPU/src/: CMakeLists.txt  OWM_functions.c  baseline-rev1_functions.c  optim0_func.cpp  optim1_qtree_func.cpp  optim3_func.cpp  rev1_func.cpp  rev1_functions.c  rev1wrong_functions.c
RandC-Baseline/: OWM.cpp  README.md
Results/: All_Optimizations.csv  All_Optimizations.txt  All_OptimizationsSYCL-CUDA.csv  All_OptimizationsSYCL-CUDA_O2.csv  All_OptimizationsSYCL-CUDA_O3.csv  All_Optimizations_minrad.csv  Baseline.txt  Sycl-cpu-results.txt  baseline_coffee.txt  memoization_and_minradius.ipynb  o1_qtree_coffee.txt  o2_index_coffee.txt  o2_partree_coffee.csv  o2_partree_coffee.txt  o2_vs_o3_comparison.csv  o2and3_maxnum_norem_coffee.txt  o2and3_maxnumber.ipynb  o2and3_minrad_norem_coffee.txt  o2and3_minradius.ipynb  o2and3_woc_coffee.txt  o2parallel-coffee.txt  o3_memoizationA.csv  o3_memoizationB_coffee.csv  o3_memoization_coffee.csv  o3_memoization_coffee.txt  o4_maxnumber_alder.txt  o4_maxnumber_coffee.csv  o4_maxnumber_coffee.txt  o4_minradius_alder.txt  o4_minradius_coffee.csv  o4_minradius_coffee.txt  o4_minradius_idc56th.csv  o4_minradius_idc56th.txt  o4_minradius_idc8th.csv  o4_minradius_idc8th.txt  o4_speedup_alder.txt  o4_speedup_coffee.csv  o4_speedup_coffee.txt  owm_sycl_coffee.csv  owm_sycl_coffee.txt  (+51 more)
SYCL-CUDA-GPU/: Makefile  fast_reading.cpp  job.sh  main2d.cu  main2dx.cu  mainBuilder.cu  main_2d.cu  (+3 more)
(+394 files in other folders)
